<resources>
    <string name="app_name">ISC MetaScan</string>
    <string name="action_info">Info</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_reports">Reports</string>
    <string name="action_report">Report</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_info">More Information</string>
    <string name="title_activity_settings">Connection Settings</string>
    <string name="title_currentconfig">Current Config</string>
    <string-array name="info_title_array">
        <item>InnoSpectra Corp. Website</item>
        <item>Purchase ISC NIRScan Devices</item>
        <item>License</item>
    </string-array>
    <string-array name="info_body_array">
         <item>Learn about InnoSpectra Corp., a professional handheld spectrometers manufacturer!</item>
         <item>Learn about InnoSpectra, TI\'s Strategic Design Partner</item>
         <item>About License of this App</item>
     </string-array>
     <string-array name="info_url_array">
         <item>http://www.ti.com/tool/dlpnirnanoevm</item>
         <item>http://e2e.ti.com/support/dlp__mems_micro-electro-mechanical_systems/f/983</item>
     </string-array>
     <string name="temperature">Temperature</string>
     <string name="lamptime">Total Lamp Time</string>
     <string name="spatial_freq">Spatial Freq</string>
     <string name="set_nano">Select Device To Connect</string>
     <string name="clear_nano">Clear Saved Device</string>
     <string name="go">Go!</string>
     <string name="forget">Forget</string>
     <string name="device_filter">Device Search Filter</string>
     <string name="rssi_filter">RSSI Filter</string>
    <string name="enable_actconfig_reminder">Enable Active Config Reminder</string>
     <string name="title_activity_graph">Graph</string>
     <string name="reflectance">Reflectance</string>
     <string name="intensity">Intensity</string>
     <string name="absorbance">Absorbance</string>
     <string name="reference_tab">Reference</string>
     <string-array name="graph_tab_index">
         <item>Reflectance</item>
         <item>Absorbance</item>
         <item>Intensity</item>
         <item>Reference</item>
     </string-array>
     <string name="aspirin">aspirin</string>
     <string name="bc">bc</string>
     <string name="bellpepper">bellpepper</string>
     <string name="coconutoil">coconutoil</string>
     <string name="coffee">coffee</string>
     <string name="corn_starch">corn_starch</string>
     <string name="eucerin_lotion">eucerin_lotion</string>
     <string name="flour">flour</string>
     <string name="glucose">glucose</string>
     <string name="out_of_spec_aspirin">out_of_spec_aspirin</string>
     <string name="delete">Delete</string>
     <string name="ok">OK</string>
     <string name="not_connected_title">Not Connected</string>
     <string name="not_connected_message">Ensure Bluetooth is powered on your Android device and your Nano, then tap the Scan button on the main view.</string>
     <string name="yes_i_know">Yes, I known</string>
     <string name="battery">Battery</string>
     <string name="humidity">Humidity</string>
     <string name="device_status">Device Status</string>
     <string name="error_status">Error Status</string>
     <string name="temp_threshold">Temperature Threshold</string>
     <string name="deg_c">deg C</string>
     <string name="deg_f">deg F</string>
     <string name="humid_threshold">Humidity Threshold</string>
     <string name="relative_humid">% RH</string>
     <string name="not_supported">Not Supported</string>
    <string name="click">Click</string>
    <string name="clear_error">Clear Error</string>
    <string-array name="detail_device_status">
        <item>Tiva</item>
        <item>Scanning</item>
        <item>BLE stack</item>
        <item>BLE connection</item>
        <item>Scan Data Interpreting</item>
        <item>Scan Button Pressed</item>
        <item>Battery in charge</item>
    </string-array>
    <string name="detail_error_status">Detailed Error Status</string>
    <string name="detail_scan_error_status">Detailed Scan Error Status</string>
    <string name="detail_adc_error_status">Detailed ADC Error Status</string>
    <string name="detail_hw_error_status">Detailed Hardware Error Status</string>
    <string name="detail_tmp006_error_status">Detailed TMP006 Error Status</string>
    <string name="detail_hdc1000_error_status">Detailed HDC1000 Error Status</string>
    <string name="detail_battery_error_status">Detailed Battery Error Status</string>
    <string name="detail_system_error_status">Detailed System Error Status</string>
     <string name="version">v%1$s (%2$d)</string>
     <string-array name="configure_options">
         <item>Device Information</item>
         <item>Device Status</item>
         <item>Scan Configurations</item>
     </string-array>
     <string name="range_start_value">%1$d nm</string>
     <string name="range_end_value">%1$d nm</string>
     <string name="width_value">%1$d nm</string>
     <string name="patterns_value">%1$d</string>
     <string name="repeats_value">%1$d</string>
     <string name="manufacturer">Manufacturer</string>
     <string name="scan_Type">Scan Type : </string>
     <string name="range_start">Spectral Range Start : </string>
     <string name="range_end">Spectral Range End : </string>
     <string name="width">Width : </string>
     <string name="number_patterns">Number of Patterns : </string>
     <string name="number_repeats">Number of Repeats</string>
     <string name="serial_sn">Nano SN</string>
     <string name="scan">Scan</string>
    <string name="ref_scan">Reference Scan</string>
     <string name="prefix">Filename Prefix</string>
     <string name="data">Data</string>
     <string name="nano">Nano</string>
     <string name="save_to_sd">Save to SD Card?</string>
     <string name="save_to_android">Save to Android Device?</string>
     <string name="cont_scan">Continuous Scan?</string>
     <string name="scan_conf">Scan Configuration</string>
     <string name="col_1">Column 1</string>
     <string name="hadamard">Hadamard</string>
     <string name="auto_cont_scan_stop">Stop Auto Continuous Scan</string>
     <string name="model">Model Number</string>
     <string name="serial">Serial Number</string>
     <string name="hw_rev">Hardware Rev</string>
     <string name="tiva_rev">Tiva Rev</string>
     <string name="spectrum_rev">Spectrum Rev</string>
     <string name="batt_level_value">%1$d%%</string>
     <string name="temp_value_c">%1$s&#x2103;</string>
     <string name="temp_value_f">%1$s&#x2109;</string>
     <string name="humid_value">%1$s%% RH</string>
     <string name="stored_configurations">Stored Configurations</string>
     <string name="reading_configurations">Reading Scan Configurations…</string>
     <string name="stored_scan_data">Stored Scan Data</string>
     <string name="reading_sd_card">Reading SD Card…</string>
     <string name="adding_configurations">Adding Configurations</string>
    <string name="scan_configurations">Scan Configurations</string>
     <string name="time_format_at">\'at\'</string>
     <string name="new_scan">New Scan</string>
     <string name="newScan">NewScan</string>
     <string name="nano_disconnected">"Nano Disconnected!"</string>
     <string name="configure">Config : </string>
     <string name="device_information">Device Information</string>
     <string name="file_not_found">Could not find the file!</string>
     <string name="emailing">"Emailing "</string>
     <string name="send_mail">"Send mail…"</string>
     <string name="no_email_clients">There are no email clients installed.</string>
     <string name="update_thresholds">Update Thresholds</string>
     <string name="scanning">Scanning…</string>
     <string name="dl_ref_cal">Downloading Ref Cal</string>
     <string name="dl_cal_matrix">Downloading Cal Matrix</string>
     <string name="select_nano">Select Device</string>
     <string name="nano_confirmation_title">Are You Sure?</string>
     <string name="nano_confirmation_msg">Are you sure you want set the Nano with MAC address: %1$s, as your primary device?</string>
     <string name="nano_forget_msg">Are you sure you want clear the Nano with MAC address: %1$s, as your primary device?</string>
     <string name="cancel">Cancel</string>
     <string name="no_sd_scans">No Stored Scans on SD Card!</string>
     <string name="desc_icon">App icon</string>
     <string name="desc_splash">TI, DLP, and ISC logo</string>
     <string name="desc_info">Info icon</string>
     <string name="lamp_time">Lamp-Stable Time(ms)</string>
     <string name="scan_mode">Manual Scan Mode</string>
     <string name="lamp">Turn-On Lamp</string>
     <string name="pga">PGA</string>
     <string name="repeat">Continuous Scan Repeats</string>
     <string name="scan_method">Scan Method</string>
     <string name="spec_start">Spectral Start (nm) : </string>
     <string name="spec_end">Spectral End (nm) : </string>
     <string-array name="scan_width">
         <item>2.34</item>
         <item>3.51</item>
         <item>4.68</item>
         <item>5.85</item>
         <item>7.03</item>
         <item>8.2</item>
         <item>9.37</item>
         <item>10.54</item>
         <item>11.71</item>
         <item>12.88</item>
         <item>14.05</item>
         <item>15.22</item>
         <item>16.39</item>
         <item>17.56</item>
         <item>18.74</item>
         <item>19.91</item>
         <item>21.08</item>
         <item>22.25</item>
         <item>23.42</item>
         <item>24.59</item>
         <item>25.76</item>
         <item>26.93</item>
         <item>28.1</item>
         <item>29.27</item>
         <item>30.44</item>
         <item>31.62</item>
         <item>32.79</item>
         <item>33.96</item>
         <item>35.13</item>
         <item>36.3</item>
         <item>37.47</item>
         <item>38.64</item>
         <item>39.81</item>
         <item>40.98</item>
         <item>42.15</item>
         <item>43.33</item>
         <item>44.5</item>
         <item>45.67</item>
         <item>46.84</item>
         <item>48.01</item>
         <item>49.18</item>
         <item>50.35</item>
         <item>51.52</item>
         <item>52.69</item>
         <item>53.86</item>
         <item>55.04</item>
         <item>56.21</item>
         <item>57.38</item>
         <item>58.55</item>
         <item>59.72</item>
         <item>60.89</item>
     </string-array>
     <string name="res">Resolution (pts) : </string>
     <string name="aver_scan">Average Scans (times)</string>
     <string name="ex_time">Exposure Time (ms) : </string>
     <string name="continuous_scan_mode">Continuous Scan Mode</string>
     <string name="scan_interval_time">Scan Interval Time (sec)</string>
     <string name="set_value">Set all config</string>
     <string name="section">Section</string>
     <string name="config_index">Config Index</string>
     <string name="serial_num">Config SerialNumber</string>
    <string name="select_config">"Select Config"</string>
    <string name="quickset_config">"Set Config"</string>
    <string name="quick_scan">"Quick Scan"</string>
    <string name="connecting">Connecting device ...</string>
    <string name="device_settings">Device Settings</string>
    <string name="unlock_device_button">Unlock Device Button</string>
    <string name="activation_status">Activation Status</string>
    <string name="activated">Activated!</string>
    <string name="set">Set</string>
    <string name="warmup_detect">"Enable Warm Up Detection"</string>
    <string name="warmup_min">Warm Up (min)</string>
    <string name="start">Start</string>
    <string name="zero">00:00</string>
    <string name="warmup">"Warm Up"</string>
    <string name="lastwarmuptime">Last Warm Up Time : </string>
</resources>