<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white">
    <ProgressBar
        android:id="@+id/calProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />
    <TextView
        android:id="@+id/progressBarinsideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calProgress"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:text="@string/connecting" />
    <Button
        android:id="@+id/bt_quickstart"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:text="@string/quick_scan"
        android:textAllCaps="false"
        android:textColor="@color/royalblue"
        android:textSize="25sp" />
    <Button
        android:id="@+id/bt_selectdeviceconfig"
        android:layout_below="@+id/bt_quickstart"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="60sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style"
        android:text="@string/select_config"
        android:textAllCaps="false"
        android:textColor="@color/royalblue"
        android:textSize="25sp" />
    <Button
        android:id="@+id/bt_quicksetconfig"
        android:layout_below="@id/bt_selectdeviceconfig"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:text="@string/quickset_config"
        android:textAllCaps="false"
        android:textColor="@color/royalblue"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bt_warmup"
        android:layout_below="@id/bt_quicksetconfig"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style_not_warmup"
        android:text="@string/warmup"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:visibility="gone"/>
    <RelativeLayout
        android:id="@+id/rl_devicesetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/bt_warmup"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_devicesetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/dip40"
            android:text="@string/device_settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/tv_physicalbutton"
            android:layout_below="@+id/tv_devicesetting"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/dip40"
            android:text="@string/unlock_device_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <Switch
            android:id="@+id/switch_physicalbutton"
            android:layout_below="@+id/tv_devicesetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_physicalbutton"
            android:checked="false"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/dip32"
            android:layout_centerHorizontal="true"
            android:scaleX="1.3"
            android:scaleY="1.3" />
        <TextView
            android:id="@+id/tv_activationkey"
            android:layout_below="@+id/switch_physicalbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/dip40"
            android:text="@string/activation_status"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_activationkey_status"
            android:layout_below="@+id/switch_physicalbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/dip32"
            android:layout_toRightOf="@+id/tv_activationkey"
            android:text="@string/activated"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <EditText
            android:layout_below="@+id/tv_activationkey"
            android:id="@+id/et_activationkey"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="@dimen/dip40"
            android:paddingLeft="@dimen/dip8"
            android:paddingRight="@dimen/dip8"
            android:background="@drawable/edittext_style"
            android:textSize="18sp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:visibility="gone"/>
        <Button
            android:id="@+id/bt_setkey"
            android:layout_below="@+id/tv_activationkey"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="@dimen/dip32"
            android:layout_toRightOf="@+id/tv_activationkey"
            android:background="@drawable/button_style"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="@color/royalblue"
            android:textSize="16sp"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_devicestatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/led_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#00000000"
            android:drawableLeft="@drawable/led_y"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:text="Connecting"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/led_ble"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/led_connect"
            android:background="#00000000"
            android:drawableLeft="@drawable/leg_gray"
            android:paddingBottom="5dp"
            android:text="BLE"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/led_scan"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/led_ble"
            android:background="#00000000"
            android:drawableLeft="@drawable/leg_gray"
            android:paddingBottom="5dp"
            android:text="Scan"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/led_error"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="#00000000"
            android:drawableLeft="@drawable/leg_gray"
            android:paddingBottom="5dp"
            android:text="Error"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp"></Button>
    </RelativeLayout>
</RelativeLayout>