<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.Innospectra.MetaScan.SettingsViewActivity">

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dip96"
            android:layout_height="@dimen/dip96"
            android:contentDescription="@string/desc_icon"
            android:src="@drawable/isc_logo" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_devicefilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_logo"
        android:paddingTop="@dimen/dip8">

        <EditText
            android:id="@+id/et_devicefilter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/et_devicefilter"
            android:text="@string/device_filter"
            android:textColor="@color/black" />

    </RelativeLayout>
    <View
        android:id="@+id/view_device_filter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_devicefilter"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/rl_rssifilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_devicefilter"
        android:paddingTop="@dimen/dip8">

        <EditText
            android:id="@+id/et_rssifilter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number"
            android:text="-100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/et_rssifilter"
            android:text="@string/rssi_filter"
            android:textColor="@color/black" />

    </RelativeLayout>
    <View
        android:id="@+id/view_rssi_filter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_rssifilter"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/rl_setNano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_rssifilter"
        android:paddingTop="@dimen/dip8">

        <Button
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_set"
            android:text="@string/set_nano"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_pref_nano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

    </RelativeLayout>

    <View
        android:id="@+id/view_set_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_setNano"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/rl_clearNano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_setNano"
        android:paddingTop="@dimen/dip8">

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/forget" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_forget"
            android:text="@string/clear_nano"
            android:textColor="@color/black" />

    </RelativeLayout>

    <View
        android:id="@+id/view_clear_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_clearNano"
        android:layout_marginBottom="@dimen/dip8"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/rl_actconfig_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_clearNano"
        android:paddingTop="@dimen/dip8"
        android:visibility="gone">

        <Switch
            android:id="@+id/switch_actconfig_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:checked="true"
            android:layout_marginRight="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/switch_actconfig_reminder"
            android:text="@string/enable_actconfig_reminder"
            android:textColor="@color/black" />

    </RelativeLayout>

    <View
        android:id="@+id/view_actconfig_reminder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_actconfig_reminder"
        android:layout_marginBottom="@dimen/dip8"
        android:background="@color/black"
        android:visibility="gone"/>

</RelativeLayout>
